fix: admin report overflow

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -893,6 +893,14 @@ video {
   max-width: 48rem;
 }
 
+.max-w-\[700px\]{
+  max-width: 700px;
+}
+
+.max-w-\[1000px\]{
+  max-width: 1000px;
+}
+
 .flex-auto{
   flex: 1 1 auto;
 }
@@ -1338,10 +1346,6 @@ video {
 
 .font-semibold{
   font-weight: 600;
-}
-
-.font-normal{
-  font-weight: 400;
 }
 
 .uppercase{
